--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,7 +22,15 @@
 				<p class="unit">%</p>
 			</div>
 		</div>
-		
+		<div class="container">
+			<div>
+				<canvas id="temperature-chart" width="100%" height="400px">
+			</div>
+			<div>
+				<canvas id="humidity-chart" width="100%" height="400px">
+			</div>
+		</div>
+		<script src="Chart.bundle.min.js"></script>
 		<script src="script.js"></script>
 	</body>
 	
