--- a/server/public/index.html
+++ b/server/public/index.html
@@ -31,6 +31,7 @@
 			</div>
 		</div>
 		<script src="Chart.bundle.min.js"></script>
+		<script src="socket.io.js"></script>
 		<script src="script.js"></script>
 	</body>
 	
