--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -9,16 +9,16 @@
 	</head>
 	
 	<body>
-		<header>Panel de sensores</header>
+		<header>Sensor Dashboard</header>
 		<div class="container">
 			<div class="temperature">
-				<p class="title">Temperatura</p>
-				<p class="value" id="temperature-display">Cargando...</p>
+				<p class="title">Temperature</p>
+				<p class="value" id="temperature-display">Loading...</p>
 				<p class="unit">ºC</p>
 			</div>
 			<div class="humidity">
-				<p class="title">Humedad</p>
-				<p class="value" id="humidity-display">Cargando...</p>
+				<p class="title">Humidity</p>
+				<p class="value" id="humidity-display">Loading...</p>
 				<p class="unit">%</p>
 			</div>
 		</div>
@@ -30,6 +30,10 @@
 				<canvas id="humidity-chart" width="100%" height="400px">
 			</div>
 		</div>
+		<footer>
+  			<p>Test dummy data</p>
+  			<p>Powered by Rainsoft [2018]</p>
+		</footer>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script>
